I change many things
Changed
name
hobbies
picture
colors

--- a/app.css
+++ b/app.css
@@ -13,10 +13,10 @@
   
   ---------------------------------------------------------------------- */
   :root {
-      --color-lightest: #ffcdcd;
-      --color-light: #ee6c6c;
-      --color: #EC6565;
-      --color-dark: #ca4e4e;
+      --color-lightest: #8f781e;
+      --color-light: #1c8eb0;
+      --color: #590b8d;
+      --color-dark: #904dbc;
       --font: "Open Sans", Helvetica, sans-serif;
   }
 
